apps/staging/linkwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden
  namespace: linkwarden
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - linkwarden.christophervestman.com
      secretName: linkwarden-tls
  rules:
    - host: linkwarden.christophervestman.com
      http:
        paths:
          - backend:
              service:
                name: linkwarden
                port:
                  number: 3000
            path: /
            pathType: Prefix
